--- a/catalogo/src/components/Content.module.css
+++ b/catalogo/src/components/Content.module.css
@@ -4,9 +4,9 @@
     align-items: center;
     text-align: center;
     color: black;
-    width: 900px;
-    margin-left: auto;
-    margin-right: auto;
+    height: auto;
+    flex-direction: column;
+
 }
 
 h1{
@@ -14,6 +14,5 @@ h1{
 }
 
 main{
-    height: 600px;
-    background-color: blueviolet;
+    background-color: black;
 }
