--- a/catalogo/src/components/Footer.module.css
+++ b/catalogo/src/components/Footer.module.css
@@ -1,13 +1,80 @@
+
 .container{
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0;
-    background-color: rgb(255, 255, 255);
-    height: 150px;
+    height:150px;
+    flex-direction: column;
+    background-color: black;
 }
 
 h1{
     color: blue;
     text-align: center;
+}
+.container_icons{
+    /* margin-top: 150px; */
+    font-size: 100px;
+    display: flex;
+    gap: 20px;
+}
+
+  .icon {
+    font-size: 40px;
+    transition: transform 0.3s ease;
+  }
+  
+  .instagram {
+    color: #9c3173;
+  }
+  
+  .github {
+    color: #ffffff;
+  }
+  
+  .linkedin {
+    color: #0077b5;
+  }
+  
+  .icon:hover {
+    transform: scale(1.2);
+  }
+  
+  .container_main{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+  .container_infos li{
+    color: #888787;
+    cursor: pointer;
+    &:hover{
+        transition: 0.6s ease;
+        color: #ffffff;
+        cursor: pointer;
+    }
+  }
+  .container_copy {
+    margin-top: 20px;
+    text-align: center; /* Centraliza o texto horizontalmente */
+    display: flex; /* Adiciona Flexbox para centralização */
+    justify-content: center; /* Centraliza horizontalmente o conteúdo */
+    align-items: center; /* Centraliza verticalmente o conteúdo */
+    width: 100%;
+    height: 100%; /* Garante que o container tenha altura para centralização vertical */
+}
+
+.container_copy p {
+    margin: 0; /* Remove margens padrão do parágrafo */
+    color: #888787;
+}
+
+.copy {
+    background-color: rgb(17, 16, 16);
+    height: 30px;
+    width: 100%; /* Opcional: ajusta a largura para ocupar o container */
 }
