--- a/catalogo/src/components/NavBar.module.css
+++ b/catalogo/src/components/NavBar.module.css
@@ -18,6 +18,6 @@ ul{
 
 li{
     margin-left: 30px;
-    color: aqua;
+    color: rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
