--- a/catalogo/src/components/NavBar.module.css
+++ b/catalogo/src/components/NavBar.module.css
@@ -20,4 +20,12 @@ li{
     margin-left: 30px;
     color: rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    &:hover{
+        color: blue;
+    }
+}
+
+a{
+    text-decoration: none;
+
 }
